// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichEditor shows a rich text editor and an error 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="mb-2"
      id="rich-text-editor-test"
      tabindex="-1"
    >
      Rich Text Editor Test
    </div>
    <div
      aria-labelledby="rich-text-editor-test"
      class=""
    >
      <textarea
        aria-hidden="true"
        id="tiny-react_37988398241745241845517"
        style="display: none;"
      />
      <div
        aria-disabled="false"
        class="tox tox-tinymce"
        role="application"
        style="visibility: hidden; height: 200px;"
      >
        <div
          class="tox-editor-container"
        >
          <div
            class="tox-editor-header"
            data-alloy-vertical-dir="toptobottom"
          >
            <div
              aria-disabled="false"
              class="tox-toolbar-overlord"
              role="group"
            >
              <div
                class="tox-toolbar__primary"
                role="group"
              >
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="true"
                    aria-label="Undo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Undo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.4 8H12c3.7 0 6.2 2 6.8 5.1.6 2.7-.4 5.6-2.3 6.8a1 1 0 01-1-1.8c1.1-.6 1.8-2.7 1.4-4.6-.5-2.1-2.1-3.5-4.9-3.5H6.4l3.3 3.3a1 1 0 11-1.4 1.4l-5-5a1 1 0 010-1.4l5-5a1 1 0 011.4 1.4L6.4 8z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="true"
                    aria-label="Redo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Redo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M17.6 10H12c-2.8 0-4.4 1.4-4.9 3.5-.4 2 .3 4 1.4 4.6a1 1 0 11-1 1.8c-2-1.2-2.9-4.1-2.3-6.8.6-3 3-5.1 6.8-5.1h5.6l-3.3-3.3a1 1 0 111.4-1.4l5 5a1 1 0 010 1.4l-5 5a1 1 0 01-1.4-1.4l3.3-3.3z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bold"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bold"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M7.8 19c-.3 0-.5 0-.6-.2l-.2-.5V5.7c0-.2 0-.4.2-.5l.6-.2h5c1.5 0 2.7.3 3.5 1 .7.6 1.1 1.4 1.1 2.5a3 3 0 01-.6 1.9c-.4.6-1 1-1.6 1.2.4.1.9.3 1.3.6s.8.7 1 1.2c.4.4.5 1 .5 1.6 0 1.3-.4 2.3-1.3 3-.8.7-2.1 1-3.8 1H7.8zm5-8.3c.6 0 1.2-.1 1.6-.5.4-.3.6-.7.6-1.3 0-1.1-.8-1.7-2.3-1.7H9.3v3.5h3.4zm.5 6c.7 0 1.3-.1 1.7-.4.4-.4.6-.9.6-1.5s-.2-1-.7-1.4c-.4-.3-1-.4-2-.4H9.4v3.8h4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Italic"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Italic"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16.7 4.7l-.1.9h-.3c-.6 0-1 0-1.4.3-.3.3-.4.6-.5 1.1l-2.1 9.8v.6c0 .5.4.8 1.4.8h.2l-.2.8H8l.2-.8h.2c1.1 0 1.8-.5 2-1.5l2-9.8.1-.5c0-.6-.4-.8-1.4-.8h-.3l.2-.9h5.8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Underline"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Underline"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16 5c.6 0 1 .4 1 1v5.5a4 4 0 01-.4 1.8l-1 1.4a5.3 5.3 0 01-5.5 1 5 5 0 01-1.6-1c-.5-.4-.8-.9-1.1-1.4a4 4 0 01-.4-1.8V6c0-.6.4-1 1-1s1 .4 1 1v5.5c0 .3 0 .6.2 1l.6.7a3.3 3.3 0 002.2.8 3.4 3.4 0 002.2-.8c.3-.2.4-.5.6-.8l.2-.9V6c0-.6.4-1 1-1zM8 17h8c.6 0 1 .4 1 1s-.4 1-1 1H8a1 1 0 010-2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bullet list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bullet list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zM4.5 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Numbered list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Numbered list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M10 17h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 110-2zM6 4v3.5c0 .3-.2.5-.5.5a.5.5 0 01-.5-.5V5h-.5a.5.5 0 010-1H6zm-1 8.8l.2.2h1.3c.3 0 .5.2.5.5s-.2.5-.5.5H4.9a1 1 0 01-.9-1V13c0-.4.3-.8.6-1l1.2-.4.2-.3a.2.2 0 00-.2-.2H4.5a.5.5 0 01-.5-.5c0-.3.2-.5.5-.5h1.6c.5 0 .9.4.9 1v.1c0 .4-.3.8-.6 1l-1.2.4-.2.3zM7 17v2c0 .6-.4 1-1 1H4.5a.5.5 0 010-1h1.2c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.4a.4.4 0 110-.8h1.3c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.5a.5.5 0 110-1H6c.6 0 1 .4 1 1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Insert/edit link"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Insert/edit link"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.2 12.3a1 1 0 011.4 1.4l-2.1 2a2 2 0 102.7 2.8l4.8-4.8a1 1 0 000-1.4 1 1 0 111.4-1.3 2.9 2.9 0 010 4L9.6 20a3.9 3.9 0 01-5.5-5.5l2-2zm11.6-.6a1 1 0 01-1.4-1.4l2-2a2 2 0 10-2.6-2.8L11 10.3a1 1 0 000 1.4A1 1 0 119.6 13a2.9 2.9 0 010-4L14.4 4a3.9 3.9 0 015.5 5.5l-2 2z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-pressed="false"
                    class="tox-tbtn tox-tbtn--select"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="tox-tbtn__select-label"
                    >
                      Browser default language
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Left to right"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Left to right"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h7a1 1 0 010 2h-1v11a1 1 0 01-2 0V7h-2v11a1 1 0 01-2 0v-6c-.5 0-1 0-1.4-.3A3.4 3.4 0 017.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L11 5zM4.4 16.2L6.2 15l-1.8-1.2a1 1 0 011.2-1.6l3 2a1 1 0 010 1.6l-3 2a1 1 0 11-1.2-1.6z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Right to left"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Right to left"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M8 5h8v2h-2v12h-2V7h-2v12H8v-7c-.5 0-1 0-1.4-.3A3.4 3.4 0 014.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L8 5zm12 11.2a1 1 0 11-1 1.6l-3-2a1 1 0 010-1.6l3-2a1 1 0 111 1.6L18.4 15l1.8 1.2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="tox-anchorbar"
            />
          </div>
          <div
            class="tox-sidebar-wrap"
          >
            <div
              class="tox-edit-area"
            >
              <iframe
                allowtransparency="true"
                class="tox-edit-area__iframe"
                frameborder="0"
                id="tiny-react_37988398241745241845517_ifr"
                title="Rich Text Area"
              />
            </div>
            <div
              class="tox-sidebar"
              role="complementary"
            >
              <div
                class="tox-sidebar__slider tox-sidebar--sliding-closed"
                data-alloy-tabstop="true"
                style="width: 0px;"
                tabindex="-1"
              >
                <div
                  class="tox-sidebar__pane-container"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="tox-statusbar"
        >
          <div
            class="tox-statusbar__resize-handle"
            data-alloy-tabstop="true"
            tabindex="-1"
            title="Resize"
          >
            <svg
              focusable="false"
              height="10"
              width="10"
            >
              <g
                fill-rule="nonzero"
              >
                <path
                  d="M8.1 1.1A.5.5 0 119 2l-7 7A.5.5 0 111 8l7-7zM8.1 5.1A.5.5 0 119 6l-3 3A.5.5 0 115 8l3-3z"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="tox-throbber"
          style="display: none;"
        />
      </div>
      <span>
        Recommended character limit (including spaces) is
      500. 500 characters remaining.
      </span>
    </div>
  </div>
</div>
`;

exports[`RichEditor shows a rich text editor with default text value 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="mb-2"
      id="rich-text-editor-test"
      tabindex="-1"
    >
      <strong>
        Rich Text Editor Test
      </strong>
    </div>
    <div
      aria-labelledby="rich-text-editor-test"
      class=""
    >
      <textarea
        aria-hidden="true"
        id="tiny-react_6908330021745241845446"
        style="display: none;"
      />
      <div
        aria-disabled="false"
        class="tox tox-tinymce"
        role="application"
        style="visibility: hidden; height: 200px;"
      >
        <div
          class="tox-editor-container"
        >
          <div
            class="tox-editor-header"
            data-alloy-vertical-dir="toptobottom"
          >
            <div
              aria-disabled="false"
              class="tox-toolbar-overlord"
              role="group"
            >
              <div
                class="tox-toolbar__primary"
                role="group"
              >
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="true"
                    aria-label="Undo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Undo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.4 8H12c3.7 0 6.2 2 6.8 5.1.6 2.7-.4 5.6-2.3 6.8a1 1 0 01-1-1.8c1.1-.6 1.8-2.7 1.4-4.6-.5-2.1-2.1-3.5-4.9-3.5H6.4l3.3 3.3a1 1 0 11-1.4 1.4l-5-5a1 1 0 010-1.4l5-5a1 1 0 011.4 1.4L6.4 8z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="true"
                    aria-label="Redo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Redo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M17.6 10H12c-2.8 0-4.4 1.4-4.9 3.5-.4 2 .3 4 1.4 4.6a1 1 0 11-1 1.8c-2-1.2-2.9-4.1-2.3-6.8.6-3 3-5.1 6.8-5.1h5.6l-3.3-3.3a1 1 0 111.4-1.4l5 5a1 1 0 010 1.4l-5 5a1 1 0 01-1.4-1.4l3.3-3.3z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bold"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bold"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M7.8 19c-.3 0-.5 0-.6-.2l-.2-.5V5.7c0-.2 0-.4.2-.5l.6-.2h5c1.5 0 2.7.3 3.5 1 .7.6 1.1 1.4 1.1 2.5a3 3 0 01-.6 1.9c-.4.6-1 1-1.6 1.2.4.1.9.3 1.3.6s.8.7 1 1.2c.4.4.5 1 .5 1.6 0 1.3-.4 2.3-1.3 3-.8.7-2.1 1-3.8 1H7.8zm5-8.3c.6 0 1.2-.1 1.6-.5.4-.3.6-.7.6-1.3 0-1.1-.8-1.7-2.3-1.7H9.3v3.5h3.4zm.5 6c.7 0 1.3-.1 1.7-.4.4-.4.6-.9.6-1.5s-.2-1-.7-1.4c-.4-.3-1-.4-2-.4H9.4v3.8h4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Italic"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Italic"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16.7 4.7l-.1.9h-.3c-.6 0-1 0-1.4.3-.3.3-.4.6-.5 1.1l-2.1 9.8v.6c0 .5.4.8 1.4.8h.2l-.2.8H8l.2-.8h.2c1.1 0 1.8-.5 2-1.5l2-9.8.1-.5c0-.6-.4-.8-1.4-.8h-.3l.2-.9h5.8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Underline"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Underline"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16 5c.6 0 1 .4 1 1v5.5a4 4 0 01-.4 1.8l-1 1.4a5.3 5.3 0 01-5.5 1 5 5 0 01-1.6-1c-.5-.4-.8-.9-1.1-1.4a4 4 0 01-.4-1.8V6c0-.6.4-1 1-1s1 .4 1 1v5.5c0 .3 0 .6.2 1l.6.7a3.3 3.3 0 002.2.8 3.4 3.4 0 002.2-.8c.3-.2.4-.5.6-.8l.2-.9V6c0-.6.4-1 1-1zM8 17h8c.6 0 1 .4 1 1s-.4 1-1 1H8a1 1 0 010-2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bullet list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bullet list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zM4.5 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Numbered list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Numbered list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M10 17h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 110-2zM6 4v3.5c0 .3-.2.5-.5.5a.5.5 0 01-.5-.5V5h-.5a.5.5 0 010-1H6zm-1 8.8l.2.2h1.3c.3 0 .5.2.5.5s-.2.5-.5.5H4.9a1 1 0 01-.9-1V13c0-.4.3-.8.6-1l1.2-.4.2-.3a.2.2 0 00-.2-.2H4.5a.5.5 0 01-.5-.5c0-.3.2-.5.5-.5h1.6c.5 0 .9.4.9 1v.1c0 .4-.3.8-.6 1l-1.2.4-.2.3zM7 17v2c0 .6-.4 1-1 1H4.5a.5.5 0 010-1h1.2c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.4a.4.4 0 110-.8h1.3c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.5a.5.5 0 110-1H6c.6 0 1 .4 1 1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Insert/edit link"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Insert/edit link"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.2 12.3a1 1 0 011.4 1.4l-2.1 2a2 2 0 102.7 2.8l4.8-4.8a1 1 0 000-1.4 1 1 0 111.4-1.3 2.9 2.9 0 010 4L9.6 20a3.9 3.9 0 01-5.5-5.5l2-2zm11.6-.6a1 1 0 01-1.4-1.4l2-2a2 2 0 10-2.6-2.8L11 10.3a1 1 0 000 1.4A1 1 0 119.6 13a2.9 2.9 0 010-4L14.4 4a3.9 3.9 0 015.5 5.5l-2 2z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-pressed="false"
                    class="tox-tbtn tox-tbtn--select"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="tox-tbtn__select-label"
                    >
                      Browser default language
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Left to right"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Left to right"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h7a1 1 0 010 2h-1v11a1 1 0 01-2 0V7h-2v11a1 1 0 01-2 0v-6c-.5 0-1 0-1.4-.3A3.4 3.4 0 017.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L11 5zM4.4 16.2L6.2 15l-1.8-1.2a1 1 0 011.2-1.6l3 2a1 1 0 010 1.6l-3 2a1 1 0 11-1.2-1.6z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Right to left"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Right to left"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M8 5h8v2h-2v12h-2V7h-2v12H8v-7c-.5 0-1 0-1.4-.3A3.4 3.4 0 014.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L8 5zm12 11.2a1 1 0 11-1 1.6l-3-2a1 1 0 010-1.6l3-2a1 1 0 111 1.6L18.4 15l1.8 1.2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="tox-anchorbar"
            />
          </div>
          <div
            class="tox-sidebar-wrap"
          >
            <div
              class="tox-edit-area"
            >
              <iframe
                allowtransparency="true"
                class="tox-edit-area__iframe"
                frameborder="0"
                id="tiny-react_6908330021745241845446_ifr"
                title="Rich Text Area"
              />
            </div>
            <div
              class="tox-sidebar"
              role="complementary"
            >
              <div
                class="tox-sidebar__slider tox-sidebar--sliding-closed"
                data-alloy-tabstop="true"
                style="width: 0px;"
                tabindex="-1"
              >
                <div
                  class="tox-sidebar__pane-container"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="tox-statusbar"
        >
          <div
            class="tox-statusbar__resize-handle"
            data-alloy-tabstop="true"
            tabindex="-1"
            title="Resize"
          >
            <svg
              focusable="false"
              height="10"
              width="10"
            >
              <g
                fill-rule="nonzero"
              >
                <path
                  d="M8.1 1.1A.5.5 0 119 2l-7 7A.5.5 0 111 8l7-7zM8.1 5.1A.5.5 0 119 6l-3 3A.5.5 0 115 8l3-3z"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="tox-throbber"
          style="display: none;"
        />
      </div>
      <span>
        Recommended character limit (including spaces) is
      2500. 2500 characters remaining.
      </span>
    </div>
  </div>
</div>
`;

exports[`RichEditor shows a rich text editor with no default text value 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="mb-2"
      id="rich-text-editor-test"
      tabindex="-1"
    >
      Rich Text Editor Test
    </div>
    <div
      aria-labelledby="rich-text-editor-test"
      class=""
    >
      <textarea
        aria-hidden="true"
        id="tiny-react_95122190711745241845382"
        style="display: none;"
      />
      <div
        aria-disabled="false"
        class="tox tox-tinymce"
        role="application"
        style="visibility: hidden; height: 200px;"
      >
        <div
          class="tox-editor-container"
        >
          <div
            class="tox-editor-header"
            data-alloy-vertical-dir="toptobottom"
          >
            <div
              aria-disabled="false"
              class="tox-toolbar-overlord"
              role="group"
            >
              <div
                class="tox-toolbar__primary"
                role="group"
              >
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="true"
                    aria-label="Undo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Undo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.4 8H12c3.7 0 6.2 2 6.8 5.1.6 2.7-.4 5.6-2.3 6.8a1 1 0 01-1-1.8c1.1-.6 1.8-2.7 1.4-4.6-.5-2.1-2.1-3.5-4.9-3.5H6.4l3.3 3.3a1 1 0 11-1.4 1.4l-5-5a1 1 0 010-1.4l5-5a1 1 0 011.4 1.4L6.4 8z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="true"
                    aria-label="Redo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Redo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M17.6 10H12c-2.8 0-4.4 1.4-4.9 3.5-.4 2 .3 4 1.4 4.6a1 1 0 11-1 1.8c-2-1.2-2.9-4.1-2.3-6.8.6-3 3-5.1 6.8-5.1h5.6l-3.3-3.3a1 1 0 111.4-1.4l5 5a1 1 0 010 1.4l-5 5a1 1 0 01-1.4-1.4l3.3-3.3z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bold"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bold"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M7.8 19c-.3 0-.5 0-.6-.2l-.2-.5V5.7c0-.2 0-.4.2-.5l.6-.2h5c1.5 0 2.7.3 3.5 1 .7.6 1.1 1.4 1.1 2.5a3 3 0 01-.6 1.9c-.4.6-1 1-1.6 1.2.4.1.9.3 1.3.6s.8.7 1 1.2c.4.4.5 1 .5 1.6 0 1.3-.4 2.3-1.3 3-.8.7-2.1 1-3.8 1H7.8zm5-8.3c.6 0 1.2-.1 1.6-.5.4-.3.6-.7.6-1.3 0-1.1-.8-1.7-2.3-1.7H9.3v3.5h3.4zm.5 6c.7 0 1.3-.1 1.7-.4.4-.4.6-.9.6-1.5s-.2-1-.7-1.4c-.4-.3-1-.4-2-.4H9.4v3.8h4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Italic"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Italic"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16.7 4.7l-.1.9h-.3c-.6 0-1 0-1.4.3-.3.3-.4.6-.5 1.1l-2.1 9.8v.6c0 .5.4.8 1.4.8h.2l-.2.8H8l.2-.8h.2c1.1 0 1.8-.5 2-1.5l2-9.8.1-.5c0-.6-.4-.8-1.4-.8h-.3l.2-.9h5.8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Underline"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Underline"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16 5c.6 0 1 .4 1 1v5.5a4 4 0 01-.4 1.8l-1 1.4a5.3 5.3 0 01-5.5 1 5 5 0 01-1.6-1c-.5-.4-.8-.9-1.1-1.4a4 4 0 01-.4-1.8V6c0-.6.4-1 1-1s1 .4 1 1v5.5c0 .3 0 .6.2 1l.6.7a3.3 3.3 0 002.2.8 3.4 3.4 0 002.2-.8c.3-.2.4-.5.6-.8l.2-.9V6c0-.6.4-1 1-1zM8 17h8c.6 0 1 .4 1 1s-.4 1-1 1H8a1 1 0 010-2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bullet list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bullet list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zM4.5 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Numbered list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Numbered list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M10 17h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 110-2zM6 4v3.5c0 .3-.2.5-.5.5a.5.5 0 01-.5-.5V5h-.5a.5.5 0 010-1H6zm-1 8.8l.2.2h1.3c.3 0 .5.2.5.5s-.2.5-.5.5H4.9a1 1 0 01-.9-1V13c0-.4.3-.8.6-1l1.2-.4.2-.3a.2.2 0 00-.2-.2H4.5a.5.5 0 01-.5-.5c0-.3.2-.5.5-.5h1.6c.5 0 .9.4.9 1v.1c0 .4-.3.8-.6 1l-1.2.4-.2.3zM7 17v2c0 .6-.4 1-1 1H4.5a.5.5 0 010-1h1.2c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.4a.4.4 0 110-.8h1.3c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.5a.5.5 0 110-1H6c.6 0 1 .4 1 1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Insert/edit link"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Insert/edit link"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.2 12.3a1 1 0 011.4 1.4l-2.1 2a2 2 0 102.7 2.8l4.8-4.8a1 1 0 000-1.4 1 1 0 111.4-1.3 2.9 2.9 0 010 4L9.6 20a3.9 3.9 0 01-5.5-5.5l2-2zm11.6-.6a1 1 0 01-1.4-1.4l2-2a2 2 0 10-2.6-2.8L11 10.3a1 1 0 000 1.4A1 1 0 119.6 13a2.9 2.9 0 010-4L14.4 4a3.9 3.9 0 015.5 5.5l-2 2z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-pressed="false"
                    class="tox-tbtn tox-tbtn--select"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="tox-tbtn__select-label"
                    >
                      Browser default language
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Left to right"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Left to right"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h7a1 1 0 010 2h-1v11a1 1 0 01-2 0V7h-2v11a1 1 0 01-2 0v-6c-.5 0-1 0-1.4-.3A3.4 3.4 0 017.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L11 5zM4.4 16.2L6.2 15l-1.8-1.2a1 1 0 011.2-1.6l3 2a1 1 0 010 1.6l-3 2a1 1 0 11-1.2-1.6z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Right to left"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Right to left"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M8 5h8v2h-2v12h-2V7h-2v12H8v-7c-.5 0-1 0-1.4-.3A3.4 3.4 0 014.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L8 5zm12 11.2a1 1 0 11-1 1.6l-3-2a1 1 0 010-1.6l3-2a1 1 0 111 1.6L18.4 15l1.8 1.2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="tox-anchorbar"
            />
          </div>
          <div
            class="tox-sidebar-wrap"
          >
            <div
              class="tox-edit-area"
            >
              <iframe
                allowtransparency="true"
                class="tox-edit-area__iframe"
                frameborder="0"
                id="tiny-react_95122190711745241845382_ifr"
                title="Rich Text Area"
              />
            </div>
            <div
              class="tox-sidebar"
              role="complementary"
            >
              <div
                class="tox-sidebar__slider tox-sidebar--sliding-closed"
                data-alloy-tabstop="true"
                style="width: 0px;"
                tabindex="-1"
              >
                <div
                  class="tox-sidebar__pane-container"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="tox-statusbar"
        >
          <div
            class="tox-statusbar__resize-handle"
            data-alloy-tabstop="true"
            tabindex="-1"
            title="Resize"
          >
            <svg
              focusable="false"
              height="10"
              width="10"
            >
              <g
                fill-rule="nonzero"
              >
                <path
                  d="M8.1 1.1A.5.5 0 119 2l-7 7A.5.5 0 111 8l7-7zM8.1 5.1A.5.5 0 119 6l-3 3A.5.5 0 115 8l3-3z"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="tox-throbber"
          style="display: none;"
        />
      </div>
      <span>
        Recommended character limit (including spaces) is
      500. 500 characters remaining.
      </span>
    </div>
  </div>
</div>
`;

exports[`RichEditor shows a rich text editor with no maxChars 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="mb-2"
      id="rich-text-editor-test"
      tabindex="-1"
    >
      <strong>
        Rich Text Editor Test
      </strong>
    </div>
    <div
      aria-labelledby="rich-text-editor-test"
      class=""
    >
      <textarea
        aria-hidden="true"
        id="tiny-react_67526637931745241845484"
        style="display: none;"
      />
      <div
        aria-disabled="false"
        class="tox tox-tinymce"
        role="application"
        style="visibility: hidden; height: 200px;"
      >
        <div
          class="tox-editor-container"
        >
          <div
            class="tox-editor-header"
            data-alloy-vertical-dir="toptobottom"
          >
            <div
              aria-disabled="false"
              class="tox-toolbar-overlord"
              role="group"
            >
              <div
                class="tox-toolbar__primary"
                role="group"
              >
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="true"
                    aria-label="Undo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Undo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.4 8H12c3.7 0 6.2 2 6.8 5.1.6 2.7-.4 5.6-2.3 6.8a1 1 0 01-1-1.8c1.1-.6 1.8-2.7 1.4-4.6-.5-2.1-2.1-3.5-4.9-3.5H6.4l3.3 3.3a1 1 0 11-1.4 1.4l-5-5a1 1 0 010-1.4l5-5a1 1 0 011.4 1.4L6.4 8z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="true"
                    aria-label="Redo"
                    class="tox-tbtn tox-tbtn--disabled"
                    tabindex="-1"
                    title="Redo"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M17.6 10H12c-2.8 0-4.4 1.4-4.9 3.5-.4 2 .3 4 1.4 4.6a1 1 0 11-1 1.8c-2-1.2-2.9-4.1-2.3-6.8.6-3 3-5.1 6.8-5.1h5.6l-3.3-3.3a1 1 0 111.4-1.4l5 5a1 1 0 010 1.4l-5 5a1 1 0 01-1.4-1.4l3.3-3.3z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bold"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bold"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M7.8 19c-.3 0-.5 0-.6-.2l-.2-.5V5.7c0-.2 0-.4.2-.5l.6-.2h5c1.5 0 2.7.3 3.5 1 .7.6 1.1 1.4 1.1 2.5a3 3 0 01-.6 1.9c-.4.6-1 1-1.6 1.2.4.1.9.3 1.3.6s.8.7 1 1.2c.4.4.5 1 .5 1.6 0 1.3-.4 2.3-1.3 3-.8.7-2.1 1-3.8 1H7.8zm5-8.3c.6 0 1.2-.1 1.6-.5.4-.3.6-.7.6-1.3 0-1.1-.8-1.7-2.3-1.7H9.3v3.5h3.4zm.5 6c.7 0 1.3-.1 1.7-.4.4-.4.6-.9.6-1.5s-.2-1-.7-1.4c-.4-.3-1-.4-2-.4H9.4v3.8h4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Italic"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Italic"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16.7 4.7l-.1.9h-.3c-.6 0-1 0-1.4.3-.3.3-.4.6-.5 1.1l-2.1 9.8v.6c0 .5.4.8 1.4.8h.2l-.2.8H8l.2-.8h.2c1.1 0 1.8-.5 2-1.5l2-9.8.1-.5c0-.6-.4-.8-1.4-.8h-.3l.2-.9h5.8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Underline"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Underline"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M16 5c.6 0 1 .4 1 1v5.5a4 4 0 01-.4 1.8l-1 1.4a5.3 5.3 0 01-5.5 1 5 5 0 01-1.6-1c-.5-.4-.8-.9-1.1-1.4a4 4 0 01-.4-1.8V6c0-.6.4-1 1-1s1 .4 1 1v5.5c0 .3 0 .6.2 1l.6.7a3.3 3.3 0 002.2.8 3.4 3.4 0 002.2-.8c.3-.2.4-.5.6-.8l.2-.9V6c0-.6.4-1 1-1zM8 17h8c.6 0 1 .4 1 1s-.4 1-1 1H8a1 1 0 010-2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Bullet list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Bullet list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0 6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zM4.5 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1zm0 6c0-.4.1-.8.4-1 .3-.4.7-.5 1.1-.5.4 0 .8.1 1 .4.4.3.5.7.5 1.1 0 .4-.1.8-.4 1-.3.4-.7.5-1.1.5-.4 0-.8-.1-1-.4-.4-.3-.5-.7-.5-1.1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Numbered list"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Numbered list"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M10 17h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 010-2zm0-6h8c.6 0 1 .4 1 1s-.4 1-1 1h-8a1 1 0 110-2zM6 4v3.5c0 .3-.2.5-.5.5a.5.5 0 01-.5-.5V5h-.5a.5.5 0 010-1H6zm-1 8.8l.2.2h1.3c.3 0 .5.2.5.5s-.2.5-.5.5H4.9a1 1 0 01-.9-1V13c0-.4.3-.8.6-1l1.2-.4.2-.3a.2.2 0 00-.2-.2H4.5a.5.5 0 01-.5-.5c0-.3.2-.5.5-.5h1.6c.5 0 .9.4.9 1v.1c0 .4-.3.8-.6 1l-1.2.4-.2.3zM7 17v2c0 .6-.4 1-1 1H4.5a.5.5 0 010-1h1.2c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.4a.4.4 0 110-.8h1.3c.2 0 .3-.1.3-.3 0-.2-.1-.3-.3-.3H4.5a.5.5 0 110-1H6c.6 0 1 .4 1 1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Insert/edit link"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Insert/edit link"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M6.2 12.3a1 1 0 011.4 1.4l-2.1 2a2 2 0 102.7 2.8l4.8-4.8a1 1 0 000-1.4 1 1 0 111.4-1.3 2.9 2.9 0 010 4L9.6 20a3.9 3.9 0 01-5.5-5.5l2-2zm11.6-.6a1 1 0 01-1.4-1.4l2-2a2 2 0 10-2.6-2.8L11 10.3a1 1 0 000 1.4A1 1 0 119.6 13a2.9 2.9 0 010-4L14.4 4a3.9 3.9 0 015.5 5.5l-2 2z"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-pressed="false"
                    class="tox-tbtn tox-tbtn--select"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="tox-tbtn__select-label"
                    >
                      Browser default language
                    </span>
                  </button>
                </div>
                <div
                  class="tox-toolbar__group"
                  data-alloy-tabstop="true"
                  role="toolbar"
                  tabindex="-1"
                  title=""
                >
                  <button
                    aria-disabled="false"
                    aria-label="Left to right"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Left to right"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M11 5h7a1 1 0 010 2h-1v11a1 1 0 01-2 0V7h-2v11a1 1 0 01-2 0v-6c-.5 0-1 0-1.4-.3A3.4 3.4 0 017.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L11 5zM4.4 16.2L6.2 15l-1.8-1.2a1 1 0 011.2-1.6l3 2a1 1 0 010 1.6l-3 2a1 1 0 11-1.2-1.6z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    aria-disabled="false"
                    aria-label="Right to left"
                    aria-pressed="false"
                    class="tox-tbtn"
                    tabindex="-1"
                    title="Right to left"
                    type="button"
                  >
                    <span
                      class="tox-icon tox-tbtn__icon-wrap"
                    >
                      <svg
                        focusable="false"
                        height="24"
                        width="24"
                      >
                        <path
                          d="M8 5h8v2h-2v12h-2V7h-2v12H8v-7c-.5 0-1 0-1.4-.3A3.4 3.4 0 014.8 10a3.3 3.3 0 010-2.8 3.4 3.4 0 011.8-1.8L8 5zm12 11.2a1 1 0 11-1 1.6l-3-2a1 1 0 010-1.6l3-2a1 1 0 111 1.6L18.4 15l1.8 1.2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="tox-anchorbar"
            />
          </div>
          <div
            class="tox-sidebar-wrap"
          >
            <div
              class="tox-edit-area"
            >
              <iframe
                allowtransparency="true"
                class="tox-edit-area__iframe"
                frameborder="0"
                id="tiny-react_67526637931745241845484_ifr"
                title="Rich Text Area"
              />
            </div>
            <div
              class="tox-sidebar"
              role="complementary"
            >
              <div
                class="tox-sidebar__slider tox-sidebar--sliding-closed"
                data-alloy-tabstop="true"
                style="width: 0px;"
                tabindex="-1"
              >
                <div
                  class="tox-sidebar__pane-container"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="tox-statusbar"
        >
          <div
            class="tox-statusbar__resize-handle"
            data-alloy-tabstop="true"
            tabindex="-1"
            title="Resize"
          >
            <svg
              focusable="false"
              height="10"
              width="10"
            >
              <g
                fill-rule="nonzero"
              >
                <path
                  d="M8.1 1.1A.5.5 0 119 2l-7 7A.5.5 0 111 8l7-7zM8.1 5.1A.5.5 0 119 6l-3 3A.5.5 0 115 8l3-3z"
                />
              </g>
            </svg>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="tox-throbber"
          style="display: none;"
        />
      </div>
    </div>
  </div>
</div>
`;
